# QRCode-Generator

./: .gitignore  Dockerfile  README copy.md  README.md  pyproject.toml
qrcodegenerator/: cli.py
qrcodegenerator/templates/: index.html
