[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qrcodegenerator"
version = "1.0.0"
description = "QR Code Generator - Generate QR codes for social profiles and websites"
license = "MIT"
requires-python = ">=3.8"
dependencies = ["flask"]

[tool.setuptools.packages.find]
include = ["qrcodegenerator*"]

[tool.setuptools.package-data]
qrcodegenerator = ["templates/*.html"]

[project.scripts]
qrcodegenerator = "qrcodegenerator.cli:main"
